Started implementing repository pattern
